2001-07-04  Jim Blandy  <jimb@redhat.com>

	* dwarf2read.c (dwarf2_build_psymtabs_hard): Remove extraneous
	code in loop condition.

2001-07-03  Michael Snyder  <msnyder@redhat.com>

	* thread_db (find_new_threads_callback, thread_db_thread_alive, 
	attach_thread): Update comments.

2001-06-29  Ken Whaley  <ken@believe.com>

	* thread-db.c (attach_thread): Check for TD_THR_ZOMBIE in addition
	to TD_THR_UNKNOWN when looking for defunct zombie threads.
	(thread_db_thread_alive): Ditto.
	(find_new_threads_callback): Ditto.

2001-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* MAINTAINERS: Add myself to the write-after-approval list.

2001-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* solib-svr4.c: Include "elf/mips.h".
	(elf_locate_base): Make DT_MIPS_RLD_MAP block unconditional.

2001-07-02  Jim Blandy  <jimb@redhat.com>

	* dwarf2read.c (read_comp_unit, sibling_die, dump_die,
	dump_die_list, store_in_ref_table, follow_die_ref): Make these
	static; they're private functions.

2001-07-01  Mark Elbrecht <snowball@bigfoot.com>

	* coffread.c (coff_symfile_read): Parse DWARF2 info if present.

2001-06-28  Elena Zannoni  <ezannoni@redhat.com>

	* TODO: Add import of readline 4.2 as a gdb 5.2 task.

2001-06-29  Andrew Cagney  <ac131313@redhat.com>

	* config/djgpp/fnchange.lst: Sort.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* config/djgpp/fnchange.lst: Rename mi0-var-block.exp,
	mi0-var-cmd.exp, mi0-var-child.exp and mi0-var-display.exp.

2001-06-29  Andreas Jaeger  <aj@suse.de>

	* MAINTAINERS: Add myself to the write-after-approval list.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* remote-array.c (SWAP_TARGET_AND_HOST): Delete macro.
	(get_hex_word): Don't use HOST_BYTE_ORDER.
	(array_fetch_registers): Add variable ``reg''.  Use
	store_unsigned_integer to byte-swap the register.  Delete unused
	local ``regs''.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Add Per Bothner to Java maintainers.
